--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "favicon-component",
+  "name": "component-favicon",
   "description": "Dynamic favicon replacement component",
   "version": "1.0.3",
-  "keywords": ["favicon", "image", "ui", "canvas"],
-  "dependencies": {},
-  "component": {
-    "scripts": {
-      "favicon/index.js": "index.js"
-    }
-  }
+  "keywords": [
+    "favicon",
+    "image",
+    "ui",
+    "canvas"
+  ],
+  "dependencies": {}
 }
